# primoji

./: .gitignore  README.md  diary.md  pyproject.toml
.github/workflows/: publish.yml
data/: additional_compositions.json  auto_compositions.json  bf_words_500k.json  breakdown_report.json  common_words.json  compression_report.json  compression_report_v2.json  compression_report_v3.json  compression_report_v4.json  coverage_report.json  dictionary_seed.json  emoji_audit.json  emoji_catalog.json  eval_sentences.json  experiment_50k_meta.json  experiment_50k_mistral_log.json  experiment_50k_primoji_log.json  llm_decomposition_candidates.json  primitives.json  proper_noun_anchors.json  v8_compositions.json  v8_rule_decompositions.json  v8_training_results.json  v9_dead_emoji.json  v9_stoplist.json  validation_log.jsonl
data/experiment_1k/: meta.json  mistral_training_log.json  primoji_training_log.json
primoji/: __init__.py  alias_map.py  byte_fallback.py  composer.py  decoder.py  dictionary.py  fuzzy.py  math_handler.py  preprocessor.py  primitives.py  tokenizer.py  utils.py  vocabulary.py
primoji/data/: common_words.json  emoji_catalog.json  primitives.json
scripts/: build_dictionary.py  chat.py  compare_results.py  coverage_test.py  eval_inference.py  eval_sampling.py  measure_compression.py  prepare_training_data.py  run_experiment.sh  run_v8_training.sh  tokenize_fineweb.py  train.py  train_125m.py  train_encoder.py  validate_dictionary.py
tests/: test_alias_map.py  test_bpb.py  test_byte_fallback.py  test_byte_fallback_coverage.py  test_chat.py  test_classify_token.py  test_composition.py  test_compositional_embedding.py  test_coverage.py  test_dictionary.py  test_encode_decode.py  test_fuzzy.py  test_id_ranges.py  test_invariants.py  test_math.py  test_preprocessor.py  test_primitives_and_vocab.py  test_roundtrip.py  test_stress.py  test_tokenizer.py
