[build-system]
requires = ["setuptools>=75.0", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "primoji"
version = "0.1.0"
description = "A compositional semantic tokenizer for LLMs based on NSM primitives, emoji, and common word tokens"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Frane Bandov", email = "frane@offbyte.com"}]
keywords = [
    "tokenizer",
    "tokenization",
    "nlp",
    "llm",
    "language-model",
    "semantic",
    "compositional",
    "emoji",
    "nsm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "emoji>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "black>=24.10",
    "ruff>=0.8",
]
build-dict = [
    "spacy>=3.8",
    "wordfreq>=3.0",
]
train = [
    "torch>=2.5",
    "tokenizers>=0.21",
    "datasets>=3.0",
    "numpy>=1.26",
]
spelling = [
    "symspellpy>=6.7",
]
all = ["primoji[dev,build-dict,train,spelling]"]

[project.urls]
Homepage = "https://github.com/frane/primoji"
Documentation = "https://github.com/frane/primoji#readme"
Repository = "https://github.com/frane/primoji"
Issues = "https://github.com/frane/primoji/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["primoji*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
